@@ -1,0 +1,58 @@
+%%BeginResource: procset dpost_cutmarks 1.1 0
+%
+% Copyright 2005 Gunnar Ritter, Freiburg i. Br., Germany. All rights reserved.
+% Use is subject to license terms.
+%
+% CDDL HEADER START
+%
+% The contents of this file are subject to the terms of the
+% Common Development and Distribution License, Version 1.0 only
+% (the "License").  You may not use this file except in compliance
+% with the License.
+%
+% You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
+% or http://www.opensolaris.org/os/licensing.
+% See the License for the specific language governing permissions
+% and limitations under the License.
+%
+% When distributing Covered Code, include this CDDL HEADER in each
+% file and include the License file at usr/src/OPENSOLARIS.LICENSE.
+% If applicable, add the following below this CDDL HEADER, with the
+% fields enclosed by brackets "[]" replaced with your own identifying
+% information: Portions Copyright [yyyy] [name of copyright owner]
+%
+% CDDL HEADER END
+%
+% Sccsid @(#)cutmarks.ps	1.1 (gritter) 12/18/05
+%
+
+/_cutmark_adj {scaling div} def
+/_cutmark_yadj {pagebbox 3 get exch sub} def
+/_cutmark_tbx {_TrimBox exch get _cutmark_adj} def
+/_cutmark_tby {_TrimBox exch get _cutmark_yadj _cutmark_adj neg} def
+/_cutmark {
+	_cutmark_tbx exch _cutmark_adj sub 3 1 roll
+	_cutmark_tby exch _cutmark_adj sub moveto
+	_cutmark_tbx exch _cutmark_adj sub 3 1 roll
+	_cutmark_tby exch _cutmark_adj sub lineto
+} def
+
+/_cutmarks {
+	/_TrimBox where {
+		pop
+		linewidth _cutmark_adj setlinewidth
+		newpath
+		/_cutmark_a 10 def
+		/_cutmark_b 20 def
+		0 1 _cutmark_a 0 0 1 _cutmark_b 0 _cutmark
+		_cutmark_a 1 0 0 _cutmark_b 1 0 0 _cutmark
+		0 3 _cutmark_a 0 0 3 _cutmark_b 0 _cutmark
+		_cutmark_a neg 3 0 0 _cutmark_b neg 3 0 0 _cutmark
+		0 3 _cutmark_a neg 2 0 3 _cutmark_b neg 2 _cutmark
+		_cutmark_a neg 3 0 2 _cutmark_b neg 3 0 2 _cutmark
+		0 1 _cutmark_a neg 2 0 1 _cutmark_b neg 2 _cutmark
+		_cutmark_a 1 0 2 _cutmark_b 1 0 2 _cutmark
+		stroke
+	} if
+} def
+%%EndResource
