@@ -276,7 +276,8 @@ the description for ".xflag" below.
 	from another font that have been selected by the fallback sequence.
 
 .trimat left-offset top-offset width height
-	sets the "TrimBox" page parameter for PDF generation. The four
+	sets the "TrimBox" page parameter for PDF generation and enables
+	printing of visible cut marks when used with "dpost -M". The four
 	arguments give the offset from the left and top margins of the
 	document (as set by ".mediasize"), and width and height of the
 	box. The default units are points. The TrimBox specifies how
